2008-05-20  David Bateman  <dbateman@free.fr>

	* configure.in (AC_CHECK_FUNCS): Add expm1, lgammaf, lgammaf_r,
	log1pf and tgammaf. Also check for libfftw3f.

2008-04-09  Rafael Laboissiere  <rafael@debian.org>

	* example/octave.desktop.in: Drop the Encoding key, which is
	deprecated by the FreeDesktop standard.

2008-04-04  John W. Eaton  <jwe@octave.org>

	* Makeconf.in (do-check-m-sources): New macro.

2008-04-03  Tatsuro MATSUOKA  <tmacchant@yahoo.co.jp>

	* README.Cygwin: Update.

2008-04-02  Jaroslav Hajek <highegg@gmail.com>

	* acx_blas_f77_func.m4: New file.
	* configure.in: Call ACX_BLAS_WITH_F77_FUNC instead of ACX_BLAS.
	Supply a warning for incompatible Fortran/BLAS configuration.

2008-03-25  Jaroslav Hajek <highegg@gmail.com>

	* configure.in: Check for expm1 and log1p functions.

2008-03-25  John W. Eaton  <jwe@octave.org>

	* configure.in: Check for trunc.

2008-03-21  David Bateman  <dbateman@free.fr>

	* configure.in (HAVE_AMD): Complete test for presence of amd.

2008-03-18  David Bateman  <dbateman@free.fr>

	* configure.in (AC_CHECK_FUNCS): Also check lgamma_r.

2008-03-11  David Bateman  <dbateman@free.fr>

	* run-octave.in: Fix typo.

2008-02-21  John W. Eaton  <jwe@octave.org>

	* examples/Makefile.in (install install-strip): Ignore errors
	installing octave.desktop file.

2008-02-15  John W. Eaton  <jwe@octave.org>

	* configure.in (*-*-freebsd*, *-*-openbsd*): Don't set SH_LD.

2008-02-14  John W. Eaton  <jwe@octave.org>

	* examples/fortdemo.cc: Don't check f77_exception_encountered.

2008-02-06  John W. Eaton  <jwe@octave.org>

	* examples/Makefile.in (octave.desktop):
	Use mv instead of move-if-change.

2008-02-05  John W. Eaton  <jwe@octave.org>

	* dlfcn/Makefile.in: Unconditionally include $(MAKEDEPS).
	Mark $(MAKEDEPS) as .PHONY targets if omit_deps is true.

2008-01-12  John W. Eaton  <jwe@octave.org>

	* aclocal.m4: Call AC_SUBST instead of AC_DEFINE_UNQOTED for
	GNUPLOT_BINARY.